# zksync-os-server

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deny.toml  native-calibration.md  run_en.sh  run_local.sh  versions.json
integration-tests/: Cargo.toml  build.rs
integration-tests/src/: assert_traits.rs  config.rs  contracts.rs  l1_helpers.rs  lib.rs  multi_node.rs  network.rs  node_log.rs  prover_tester.rs  provider.rs  rpc_recorder.rs  test_config.rs  utils.rs  wallets.rs
integration-tests/src/upgrade/: builder.rs  default_upgrade.rs  interfaces.rs  tester.rs
integration-tests/src/version_restart/: mod.rs  releases.rs  scenario.rs  server.rs  settlement.rs
integration-tests/test-contracts/: README.md  foundry.toml
integration-tests/test-contracts/src/: AddressWarmingTest.sol  BlockHashTest.sol  Counter.sol  PrecompileDelegateCallTest.sol  RawBytecodeTest.sol  RawEvmEdgeCaseTest.sol  SelfdestructComboTest.sol  SelfdestructDelegateCallTest.sol  SelfdestructGasTest.sol  SelfdestructNewAccountGasTest.sol  TestERC20.sol  TracingPrimary.sol  WarmAfterRevertTest.sol
integration-tests/test-contracts/test/: P256Verifier.t.sol  PaliFixedRateTokenPaymaster.t.sol  PaliGuardianRecoveryModule.t.sol  PaliP256WebAuthnValidatorModule.t.sol  PaliSLHDSAValidatorModule.t.sol  PaliSmartAccount.t.sol  PaliSmartAccountFactory.t.sol  PaliValidatorMalformedSignature.t.sol  PasskeySmartAccount.t.sol  SyscoinEntryPoint.t.sol  SyscoinZKSYSToken.t.sol  ZkSysIssuer.t.sol  ZkSysMembershipRegistry.t.sol  ZkSysNativeStakingVault.t.sol  ZkSysRegistryBridge.t.sol  ZkSysRewardWeightRegistry.t.sol
integration-tests/testdata/: replay-archive.key
integration-tests/tests/: api.rs  backpressure.rs  call.rs  consensus_node.rs  deployment_filter.rs  erc20.rs  evm_behavioral_differences.rs  external_node.rs  interop.rs  l1.rs  prover.rs  suite.rs  tracing.rs  version_restart.rs
integration-tests/tests/consensus_node/: mod.rs  restarted_node_catchup.rs
integration-tests/tests/node/: batcher.rs  bitcoin_da.rs  external_node.rs  mempool.rs  mod.rs  rebuild.rs  replay_archive.rs  restart.rs
integration-tests/tests/protocol/: erc20.rs  interop.rs  l1.rs  mod.rs
integration-tests/tests/rpc/: api.rs  call.rs  deployment_filter.rs  fill_transaction.rs  filter.rs  mod.rs  policy_client.rs  pubsub.rs  simulate.rs  storage_proof.rs  transactions.rs
integration-tests/tests/upgrade/: mod.rs
lib/alloy_ext/: Cargo.toml
lib/alloy_ext/src/: dyn_wallet_provider.rs  lib.rs  network.rs  provider.rs
lib/backpressure/: Cargo.toml  README.md
lib/backpressure/src/: config.rs  gate.rs  lib.rs  metrics.rs  monitor.rs  tracker.rs
lib/base_token_adjuster/: Cargo.toml
lib/base_token_adjuster/src/: lib.rs
lib/batch_types/: Cargo.toml
lib/batch_types/src/: batch_info.rs  batch_signature.rs  batcher_model.rs  block_merkle_tree_data.rs  lib.rs
lib/batch_verification/: Cargo.toml
lib/batch_verification/src/: config.rs  lib.rs  request.rs  verify_batch_wire.rs
lib/consensus_types/: Cargo.toml
lib/consensus_types/src/: lib.rs
lib/contract_interface/: Cargo.toml
lib/contract_interface/src/: calldata.rs  l1_discovery.rs  lib.rs  models.rs  settlement_layer_intervals.rs
lib/gas_adjuster/: Cargo.toml
lib/gas_adjuster/src/: lib.rs  statistics.rs
lib/genesis/: Cargo.toml
lib/genesis/src/: lib.rs
lib/internal_config/: Cargo.toml
lib/internal_config/src/: lib.rs
lib/interop_fee_updater/: Cargo.toml
lib/interop_fee_updater/src/: lib.rs
lib/l1_sender/: Cargo.toml
lib/l1_sender/src/: batcher_metrics.rs  batcher_model.rs  commitment.rs  config.rs  lib.rs  metrics.rs  pipeline_component.rs  upgrade_gatekeeper.rs
lib/l1_watcher/: Cargo.toml
lib/l1_watcher/src/: batch_range_watcher.rs  block_updates.rs  commit_watcher.rs  committed_batch_provider.rs  config.rs  execute_watcher.rs  gateway_migration_watcher.rs  interop_watcher.rs  lib.rs  logs_cache.rs  metrics.rs  migration_finalized_watcher.rs  persist_batch_watcher.rs  revert_watcher.rs  settlement_layer_watcher.rs  sink.rs  sl_aware_watcher.rs  traits.rs  tx_watcher.rs  upgrade_tx_watcher.rs  util.rs  watcher.rs
lib/mempool/: Cargo.toml
lib/mempool/src/: config.rs  interop_fee_updater.rs  interop_tx_stream.rs  lib.rs  metrics.rs  pool.rs  stream.rs  transaction.rs
lib/merkle_tree/: Cargo.toml
lib/merkle_tree/examples/: loadtest_zk_os_merkle_tree.rs
lib/merkle_tree/src/: consistency.rs  hasher.rs  lib.rs  with_version.rs
lib/merkle_tree_api/: Cargo.toml  README.md
lib/merkle_tree_api/src/: flat.rs  hasher.rs  lib.rs  proofs.rs  types.rs
lib/multivm/: Cargo.toml  build.rs
lib/multivm/src/: adapter.rs  deployment_filter.rs  lib.rs
lib/network/: Cargo.toml
lib/network/src/: config.rs  lib.rs  metrics.rs  protocol.rs  service.rs  session.rs  version.rs
lib/network/tests/: e2e.rs
lib/observability/: Cargo.toml  README.md
lib/observability/src/: component_health_reporter.rs  component_state_reporter.rs  generic_component_state.rs  jemalloc.rs  lib.rs  logs.rs  metrics.rs  prometheus.rs  sentry.rs  state_label.rs  tokio_runtime.rs
lib/operator_signer/: Cargo.toml
lib/operator_signer/src/: gcp.rs  lib.rs
lib/pipeline/: Cargo.toml
lib/pipeline/src/: builder.rs  component_id.rs  has_block_range_end.rs  lib.rs  peekable_receiver.rs  send_and_record.rs  traits.rs
lib/pipeline_health/: Cargo.toml
lib/pipeline_health/src/: config.rs  lib.rs  metrics.rs  monitor.rs
lib/priority_tree/: Cargo.toml
lib/priority_tree/src/: lib.rs
lib/provider/: Cargo.toml
lib/provider/src/: lib.rs  logs_cache.rs  metrics.rs
lib/raft/: Cargo.toml
lib/raft/src/: bootstrap.rs  config.rs  init.rs  leadership_monitor.rs  lib.rs  model.rs  network.rs  state_machine.rs  status.rs  storage.rs
lib/replay_archive/: Cargo.toml  README.md
lib/replay_archive/src/: age_encrypted.rs  component.rs  gate_component.rs  init.rs  lib.rs  reader.rs  (+5 more)
lib/reth_compat/: Cargo.toml
txs-test/: Cargo.toml  fres.txt  process.py  run.sh
txs-test/src/: contracts.rs  main.rs
txs-test/test-contracts/: README.md
(+570 files in other folders)
