[workspace]
members = [
    "lib/contract_interface",
    "lib/crypto",
    "lib/genesis",
    "lib/l1_sender",
    "lib/l1_watcher",
    "lib/mempool",
    "lib/merkle_tree",
    "lib/mini_merkle_tree",
    "lib/priority_tree",
    "lib/rocksdb",
    "lib/rpc",
    "lib/rpc_api",
    "lib/sequencer",
    "lib/state",
    "lib/storage",
    "lib/storage_api",
    "lib/types",
    "node/bin",
    "integration-tests",
    "tools/generate-deposit",
    "lib/observability",
    "lib/object_store",
    "lib/state_full_diffs",
    "lib/status",
    "lib/multivm",
    "lib/pipeline",
    "lib/gas_adjuster",
    "lib/batch_verification",
    "lib/batch_types",
    "lib/socket",
    "lib/internal_config",
    "lib/network",
    "lib/metadata",
    "lib/external_price_api",
    "lib/base_token_adjuster",
    "lib/reth_compat",
]
resolver = "3"
default-members = ["node/bin"]

[workspace.package]
version = "0.14.1"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
auto_impl = "1.3.0"
blake2 = "0.10.6"
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "1.1.1", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-rlp = { version = "0.3.12" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1"
sentry = "0.43.0"
regex = "1.11.3"

#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }
#zk_os_forward_system = { package = "forward_system", path = "../zksync-os/forward_system", features = ["evm-compatibility"] }
#zk_ee = { package = "zk_ee", path = "../zksync-os/zk_ee" }
#zk_os_basic_system = { package = "basic_system", path = "../zksync-os/basic_system" }
#zk_os_api = { package = "zksync_os_api", path = "../zksync-os/api" }

zksync_os_evm_errors = { version = "0.0.10" }
zksync_os_interface = { version = "0.0.10" }

zk_os_forward_system_0_0_26 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.26-rc2", features = [
    "evm-compatibility",
    "no_print",
] }
zk_os_forward_system_0_1_0 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.1.0-rc1", features = [
    "production",
    "no_print",
    # We had an issue in this version - it's compilable only with the testing feature.
    # It was used with this feature, so it should stay here forever.
    "testing",
], default-features = false }

# Dependency on `zk_ee_0_1_0` and `zk_os_basic_system_0_1_0` can be removed after server doesn't have to prove and submit v29 batches.
# After they're removed you'll see where they were used and should be able to clean it up there.
zk_ee_0_1_0 = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.1.0-rc1" }
zk_os_basic_system_0_1_0 = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.1.0-rc1" }

zk_ee_0_2_4 = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4" }
zk_os_basic_system_0_2_4 = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4" }
zk_os_forward_system_0_2_4 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4", features = [
    "production",
    "no_print",
], default-features = false }

zk_os_forward_system = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.5", features = [
    "production",
    "no_print",
], default-features = false }
zk_ee = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.5" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.5" }
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.5" }
zk_os_evm_interpreter = { package = "evm_interpreter", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.5" }

zk_os_forward_system_dev = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "dev-20260122-4", features = [
    "production",
    "no_print",
], default-features = false }

#execution_utils = { package = "execution_utils", path = "../zksync-airbender/execution_utils" }
#full_statement_verifier = { package = "full_statement_verifier", path = "../zksync-airbender/full_statement_verifier" }

execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }
full_statement_verifier = { package = "full_statement_verifier", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }

execution_utils_0_5_1 = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.1" }
full_statement_verifier_0_5_1 = { package = "full_statement_verifier", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.1" }

zksync_os_prover_service = { git = "https://github.com/matter-labs/zksync-airbender-prover.git", tag = "v0.7.0" }

tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
ruint = { version = "1.12", default-features = false }
dashmap = "6.1.0"
itertools = "0.14.0"
futures = "0.3"
vise = "0.3.0"
vise-exporter = "0.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
smart-config = { version = "0.4.0-pre.2"}
smart-config-commands = { version = "0.4.0-pre.2" }
thiserror = "2.0.12"
clap = "4.2.2"
insta = "1.29.0"
jsonrpsee = { version = "0.26.0", default-features = false }
leb128 = "0.2.5"
rayon = "1.11.0"
once_cell = "1"
proptest = "1.6.0"
rand = "0.9.1"
tempfile = "3.0.2"
base64 = "0.22.1"
axum = "0.8.4"
http = "1.3.1"
fs2 = "0.4.3"
test-log = { version = "0.2.18", default-features = false }
backon = "1.5.1"
reqwest = "0.12.22"
time = "0.3"
criterion = "0.7.0"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = "0.6.6"
hyper = "1.6.0"
hyper-util = "0.1.19"
semver = { version = "1", features = ["serde"] }
async-stream = "0.3.6"
num_cpus = "1.17.0"
rocksdb = "0.24.0"
thread_local = "1.1.9"
pin-project = "1.1.10"
aws-config = { version = "1.8.6", default-features = false, features = [
    "behavior-version-latest",
] }
aws-runtime = { version = "1.5.10" }
aws-sdk-s3 = { version = "1.106.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
assert_matches = "1.5"
serde_yaml = "0.9"
secrecy = "0.10.3"
cargo_metadata = { version = "0.20.0", default-features = false }
tracing-logfmt = { version = "0.3.5" }
url = "2.5.7"
num_enum = "0.7.2"
metrics = "0.24.2"
chrono = { version = "0.4", default-features = false }
boa_engine = { version = "0.21.0" }
boa_gc = { version = "0.21.0" }
structdiff = { version = "0.7.3", features = ["debug_diffs"] }
num = { version = "0.4" }
httpmock = "0.8"

tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"

# Reth dependencies
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

zksync-os-revm = { git = "https://github.com/matter-labs/zksync-os-revm", tag = "v0.0.3" }

# "Local" dependencies
zksync_os_contract_interface = { version = "=0.14.1", path = "lib/contract_interface" }
zksync_os_crypto = { version = "=0.14.1", path = "lib/crypto" }
zksync_os_l1_sender = { version = "=0.14.1", path = "lib/l1_sender" }
zksync_os_l1_watcher = { version = "=0.14.1", path = "lib/l1_watcher" }
zksync_os_mempool = { version = "=0.14.1", path = "lib/mempool" }
zksync_os_mini_merkle_tree = { version = "=0.14.1", path = "lib/mini_merkle_tree" }
zksync_os_merkle_tree = { version = "=0.14.1", path = "lib/merkle_tree" }
zksync_os_priority_tree = { version = "=0.14.1", path = "lib/priority_tree" }
zksync_os_observability = { version = "=0.14.1", path = "lib/observability" }
zksync_os_rocksdb = { version = "=0.14.1", path = "lib/rocksdb" }
zksync_os_rpc = { version = "=0.14.1", path = "lib/rpc" }
zksync_os_rpc_api = { version = "=0.14.1", path = "lib/rpc_api" }
zksync_os_sequencer = { version = "=0.14.1", path = "lib/sequencer" }
zksync_os_state = { version = "=0.14.1", path = "lib/state" }
zksync_os_state_full_diffs = { version = "=0.14.1", path = "lib/state_full_diffs" }
zksync_os_storage = { version = "=0.14.1", path = "lib/storage" }
zksync_os_storage_api = { version = "=0.14.1", path = "lib/storage_api" }
zksync_os_types = { version = "=0.14.1", path = "lib/types" }
zksync_os_genesis = { version = "=0.14.1", path = "lib/genesis" }
zksync_os_object_store = { version = "=0.14.1", path = "lib/object_store" }
zksync_os_status_server = { version = "=0.14.1", path = "lib/status" }
zksync_os_multivm = { version = "=0.14.1", path = "lib/multivm" }
zksync_os_pipeline = { version = "=0.14.1", path = "lib/pipeline" }
zksync_os_revm_consistency_checker = { version = "=0.14.1", path = "lib/revm_consistency_checker" }
zksync_os_gas_adjuster = { version = "=0.14.1", path = "lib/gas_adjuster" }
zksync_os_batch_verification = { version = "=0.14.1", path = "lib/batch_verification" }
zksync_os_batch_types = { version = "=0.14.1", path = "lib/batch_types" }
zksync_os_socket = { version = "=0.14.1", path = "lib/socket" }
zksync_os_internal_config = { version = "=0.14.1", path = "lib/internal_config" }
zksync_os_network = { version = "=0.14.1", path = "lib/network" }
zksync_os_metadata = { version = "=0.14.1", path = "lib/metadata" }
zksync_os_external_price_api = { version = "=0.14.1", path = "lib/external_price_api" }
zksync_os_base_token_adjuster = { version = "=0.14.1", path = "lib/base_token_adjuster" }
zksync_os_reth_compat = { version = "=0.14.1", path = "lib/reth_compat" }

zksync_os_server = { version = "=0.14.1", path = "node/bin" }

#[patch.crates-io]
#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }

[profile.release]
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
