[workspace]
members = [
    "lib/contract_interface",
    "lib/crypto",
    "lib/genesis",
    "lib/l1_sender",
    "lib/l1_watcher",
    "lib/mempool",
    "lib/merkle_tree",
    "lib/merkle_tree_api",
    "lib/mini_merkle_tree",
    "lib/priority_tree",
    "lib/rocksdb",
    "lib/rpc",
    "lib/rpc_api",
    "lib/sequencer",
    "lib/state",
    "lib/storage",
    "lib/storage_api",
    "lib/types",
    "node/bin",
    "node/config-validation-macros",
    "integration-tests",
    "integration-tests-macros",
    "tools/generate-deposit",
    "tools/verify-storage-proof",
    "lib/observability",
    "lib/state_full_diffs",
    "lib/status",
    "lib/multivm",
    "lib/pipeline",
    "lib/gas_adjuster",
    "lib/batch_verification",
    "lib/batch_types",
    "lib/internal_config",
    "lib/interop_fee_updater",
    "lib/network",
    "lib/metadata",
    "lib/external_price_api",
    "lib/base_token_adjuster",
    "lib/reth_compat",
    "lib/operator_signer",
    "lib/raft",
    "lib/tx_validators",
]
resolver = "3"
default-members = ["node/bin"]

[workspace.package]
version = "0.18.2"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os-server"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
auto_impl = "1.3.0"
blake2 = "0.10.6"
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "1.7.3", default-features = false, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-rlp = { version = "0.3.12" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1"
sentry = "0.43.0"
regex = "1.11.3"

#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }
#zk_os_forward_system = { package = "forward_system", path = "../zksync-os/forward_system", features = ["evm-compatibility"] }
#zk_ee = { package = "zk_ee", path = "../zksync-os/zk_ee" }
#zk_os_basic_system = { package = "basic_system", path = "../zksync-os/basic_system" }
#zk_os_api = { package = "zksync_os_api", path = "../zksync-os/api" }

# Interface version expected to be implemented by ALL zksync-os versions present in this file (historical, previous,
# current and dev). If you bump interface version you will have to back-port the changes to all historical versions of
# zksync-os.

zksync_os_evm_errors = { version = "0.0.14" }
zksync_os_interface = { version = "0.0.14" }

# Historical versions of zksync-os that are kept to be able to replay old blocks and simulate calls on them. Only
# forward system dependencies are expected to be in this section.

zk_os_forward_system_0_0_28 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.0.28-interface-v0.0.14", features = [
    "evm-compatibility",
    "no_print",
] }
zk_os_forward_system_0_1_2 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.1.2-interface-v0.0.14", features = [
    "production",
    "no_print",
    # We had an issue in this version - it's compilable only with the testing feature.
    # It was used with this feature, so it should stay here forever.
    "testing",
], default-features = false }
# v0.2.x is not historical yet, but we use a separate version for simulation so that `eth_estimateGas` can work with
# 0-balance accounts. The fix was not a part of v0.2.5 and unfortunately cannot be included without changing `app.bin`.
zk_os_forward_system_0_2_8 = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.8-simulation-only-interface-v0.0.14", features = [
    "production",
    "no_print",
], default-features = false }

# Previous version of zksync-os that can still be used to prove and submit batches. Also includes airbender dependencies
# that are necessary to verify said proofs on the server end.
#
# After its support is dropped, forward system is moved in the historical section above under a new name.
# (`zk_os_forward_system_<version>`), while `zk_ee` and `zk_os_basic_system` dependencies are dropped completely.

#zk_ee_prev = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4" }
#zk_os_basic_prev = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4" }
#zk_os_forward_prev = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.4", features = [
#    "production",
#    "no_print",
#], default-features = false }
#execution_utils_prev = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.1" }
#full_statement_verifier_prev = { package = "full_statement_verifier", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.1" }

# Current (as in most recently released) version of zksync-os used to prove and submit new batches. Also includes
# airbender dependencies that are necessary to verify said proofs on the server end.
#
# When a new version is released this version gets downgraded to the "previous version" section above.

zk_os_forward_system = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.9-interface-v0.0.14", features = [
    "production",
    "no_print",
], default-features = false }
zk_ee = { git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.9-interface-v0.0.14" }
zk_os_basic_system = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.9-interface-v0.0.14" }
zk_os_api = { package = "zksync_os_api", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.9-interface-v0.0.14" }
zk_os_evm_interpreter = { package = "evm_interpreter", git = "https://github.com/matter-labs/zksync-os", tag = "v0.2.9-interface-v0.0.14" }
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }
full_statement_verifier = { git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }

# Next version of zksync-os that is currently in development. Usually points to a tag with some intermediary state.
#
# Can be updated at any time and changing it does not count as a breaking change.

zk_os_forward_system_dev = { package = "forward_system", git = "https://github.com/matter-labs/zksync-os", tag = "dev-20260402", features = [
    "production",
    "no_print",
], default-features = false }
zk_ee_dev = { package = "zk_ee", git = "https://github.com/matter-labs/zksync-os", tag = "dev-20260402" }
zk_os_basic_system_dev = { package = "basic_system", git = "https://github.com/matter-labs/zksync-os", tag = "dev-20260402" }

# Other dependencies.

tokio = "1.45.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["codec"], default-features = false }
ruint = { version = "1.12", default-features = false }
dashmap = "6.1.0"
itertools = "0.14.0"
futures = "0.3"
vise = "0.3.0"
vise-exporter = "0.3.0"
bincode = { version = "2.0.1", features = ["serde"] }
smart-config = { version = "0.4.0-pre.2" }
smart-config-commands = { version = "0.4.0-pre.2" }
thiserror = "2.0.12"
clap = "4.2.2"
insta = "1.29.0"
jsonrpsee = { version = "0.26.0", default-features = false }
leb128 = "0.2.5"
rayon = "1.11.0"
once_cell = "1"
proptest = "1.6.0"
rand = "0.9.1"
tempfile = "3.0.2"
base64 = "0.22.1"
axum = "0.8.4"
http = "1.3.1"
fs2 = "0.4.3"
test-log = { version = "0.2.18", default-features = false }
backon = "1.5.1"
reqwest = "0.12.22"
time = "0.3.47"
criterion = "0.7.0"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = "0.6.6"
hyper = "1.6.0"
hyper-util = "0.1.19"
semver = { version = "1", features = ["serde"] }
num_cpus = "1.17.0"
rocksdb = "0.24.0"
thread_local = "1.1.9"
pin-project = "1.1.10"
assert_matches = "1.5"
serde_yaml = "0.9"
secrecy = "0.10.3"
cargo_metadata = { version = "0.20.0", default-features = false }
tracing-logfmt = { version = "0.3.5" }
url = "2.5.7"
num_enum = "0.7.2"
metrics = "0.24.2"
chrono = { version = "0.4", default-features = false }
boa_engine = { version = "0.21.0" }
boa_gc = { version = "0.21.0" }
structdiff = { version = "0.7.3", features = ["debug_diffs"] }
num = { version = "0.4" }
httpmock = "0.8"
rangemap = "1.7.1"
flate2 = "1.1.8"
tar = "0.4"
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27.7", default-features = false, features = ["native-tokio", "ring", "tls12"] }
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std"] }
test-casing = "0.2.0-beta.1"
quote = "1"
syn = "2"
proc-macro2 = "1"

tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"

# Reth dependencies
reth-db-models = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-net-nat = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-discv5 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }

zksync-os-revm = { git = "https://github.com/matter-labs/zksync-os-revm", tag = "v0.0.4" }

# "Local" dependencies
zksync_os_contract_interface = { version = "=0.18.2", path = "lib/contract_interface" }
zksync_os_crypto = { version = "=0.18.2", path = "lib/crypto" }
zksync_os_l1_sender = { version = "=0.18.2", path = "lib/l1_sender" }
zksync_os_l1_watcher = { version = "=0.18.2", path = "lib/l1_watcher" }
zksync_os_mempool = { version = "=0.18.2", path = "lib/mempool" }
zksync_os_mini_merkle_tree = { version = "=0.18.2", path = "lib/mini_merkle_tree" }
zksync_os_merkle_tree = { version = "=0.18.2", path = "lib/merkle_tree" }
zksync_os_config_validation_macros = { version = "=0.18.2", path = "node/config-validation-macros" }
zksync_os_merkle_tree_api = { version = "=0.18.2", path = "lib/merkle_tree_api" }
zksync_os_priority_tree = { version = "=0.18.2", path = "lib/priority_tree" }
zksync_os_observability = { version = "=0.18.2", path = "lib/observability" }
zksync_os_rocksdb = { version = "=0.18.2", path = "lib/rocksdb" }
zksync_os_rpc = { version = "=0.18.2", path = "lib/rpc" }
zksync_os_rpc_api = { version = "=0.18.2", path = "lib/rpc_api" }
zksync_os_sequencer = { version = "=0.18.2", path = "lib/sequencer" }
zksync_os_state = { version = "=0.18.2", path = "lib/state" }
zksync_os_state_full_diffs = { version = "=0.18.2", path = "lib/state_full_diffs" }
zksync_os_storage = { version = "=0.18.2", path = "lib/storage" }
zksync_os_storage_api = { version = "=0.18.2", path = "lib/storage_api" }
zksync_os_types = { version = "=0.18.2", path = "lib/types" }
zksync_os_genesis = { version = "=0.18.2", path = "lib/genesis" }
zksync_os_status_server = { version = "=0.18.2", path = "lib/status" }
zksync_os_multivm = { version = "=0.18.2", path = "lib/multivm" }
zksync_os_pipeline = { version = "=0.18.2", path = "lib/pipeline" }
zksync_os_revm_consistency_checker = { version = "=0.18.2", path = "lib/revm_consistency_checker" }
zksync_os_gas_adjuster = { version = "=0.18.2", path = "lib/gas_adjuster" }
zksync_os_batch_verification = { version = "=0.18.2", path = "lib/batch_verification" }
zksync_os_batch_types = { version = "=0.18.2", path = "lib/batch_types" }
zksync_os_internal_config = { version = "=0.18.2", path = "lib/internal_config" }
zksync_os_interop_fee_updater = { version = "=0.18.2", path = "lib/interop_fee_updater" }
zksync_os_network = { version = "=0.18.2", path = "lib/network" }
zksync_os_raft = { version = "=0.18.2", path = "lib/raft" }
zksync_os_metadata = { version = "=0.18.2", path = "lib/metadata" }
zksync_os_external_price_api = { version = "=0.18.2", path = "lib/external_price_api" }
zksync_os_base_token_adjuster = { version = "=0.18.2", path = "lib/base_token_adjuster" }
zksync_os_reth_compat = { version = "=0.18.2", path = "lib/reth_compat" }
zksync_os_operator_signer = { version = "=0.18.2", path = "lib/operator_signer" }
zksync_os_integration_tests_macros = { version = "=0.18.2", path = "integration-tests-macros" }
zksync_os_tx_validators = { version = "=0.18.2", path = "lib/tx_validators" }

zksync_os_server = { version = "=0.18.2", path = "node/bin" }

#[patch.crates-io]
#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }

[profile.release]
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
