[package]
name = "zksync_os_integration_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
build = "build.rs"

[dependencies]
zksync_os_server.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_types.workspace = true
zksync_os_rpc_api.workspace = true
zksync_os_merkle_tree_api.workspace = true
zksync_os_state_full_diffs.workspace = true
zksync_os_multivm.workspace = true
zksync_os_network.workspace = true
zksync_os_integration_tests_macros.workspace = true
zksync_os_verify_storage_proof = { path = "../tools/verify-storage-proof" }

reth-tasks.workspace = true

alloy = { workspace = true, default-features = false, features = ["provider-anvil-node", "rand", "json-rpc", "pubsub", "provider-ws"] }
anyhow.workspace = true
flate2.workspace = true
fs2.workspace = true
reqwest = { workspace = true, optional = true }
tar.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_json.workspace = true
backon.workspace = true
futures.workspace = true
serde.workspace = true
regex = "1.11.1"
smart-config.workspace = true
serde_yaml.workspace = true

# Needed for upgrade functionality tests
zk_os_api.workspace = true
zk_os_basic_system.workspace = true
blake2.workspace = true

[build-dependencies]
flate2.workspace = true
sha2 = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, default-features = false, features = ["trace", "color"] }
regex.workspace = true
# SYSCOIN: mock the Bitcoin DA RPC surface in integration tests.
httpmock.workspace = true

[features]
prover-tests = ["dep:reqwest"]
gpu-prover-tests = ["prover-tests"]
