[package]
name = "zksync_os_backpressure"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_observability = { path = "../observability" }
zksync_os_pipeline      = { path = "../pipeline" }
zksync_os_types         = { path = "../types" }
reth-tasks              = { workspace = true }
tokio                   = { workspace = true, features = ["time", "sync", "macros", "rt"] }
tokio-stream            = { workspace = true }
futures                 = { workspace = true }
vise                    = { workspace = true }
tracing                 = { workspace = true }

