[package]
name = "zksync_os_base_token_adjuster"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vise.workspace = true

tokio = { workspace = true, features = ["time"] }
anyhow.workspace = true
tracing.workspace = true
alloy = { workspace = true, default-features = false, features = [
    "reqwest",
    "provider-debug-api",
    "signer-local",
] }
secrecy.workspace = true
num.workspace = true

zksync_os_external_price_api = { workspace = true }
zksync_os_contract_interface.workspace = true
zksync_os_types.workspace = true
zksync_os_operator_signer.workspace = true
