[package]
name = "zksync_os_batch_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_merkle_tree.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_mini_merkle_tree.workspace = true
zksync_os_types.workspace = true
zksync_os_batcher_metrics.workspace = true
zksync_os_observability.workspace = true
zksync_os_pipeline.workspace = true

zksync_os_interface.workspace = true

alloy = { workspace = true, features = ["signer-local"] }
thiserror.workspace = true
serde.workspace = true
blake2.workspace = true
time.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde_json.workspace = true
