[package]
name = "zksync_os_batch_verification"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true
zksync_os_observability.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_l1_sender.workspace = true
zksync_os_merkle_tree.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_pipeline.workspace = true
zksync_os_batch_types.workspace = true
zksync_os_network.workspace = true

zksync_os_interface.workspace = true

alloy = { workspace = true, default-features = false, features = ["rlp"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
secrecy.workspace = true
vise.workspace = true
