[package]
name = "zksync_os_contract_interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = ["contract", "providers"] }
anyhow.workspace = true
backon.workspace = true
serde.workspace = true
tracing.workspace = true
vise.workspace = true
structdiff.workspace = true
zk_ee.workspace = true
