[package]
name = "zksync_os_gas_adjuster"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["reqwest", "rpc-types", "providers"] }
async-trait.workspace = true
anyhow.workspace = true
vise.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
