[package]
name = "zksync_os_gas_adjuster"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["reqwest", "rpc-types", "providers"] }
async-trait.workspace = true
anyhow.workspace = true
vise.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
num.workspace = true
zksync_os_rpc_api.workspace = true
bitcoin_da_client = { git = "https://github.com/SYS-Labs/bitcoin_da_client.git", tag = "v0.1.8" }
