[package]
name = "zksync_os_genesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_types.workspace = true
zksync_os_l1_watcher.workspace = true
zksync_os_provider.workspace = true
zksync_os_contract_interface.workspace = true
zksync_os_storage_api.workspace = true

alloy = { workspace = true, default-features = false, features = ["consensus", "sol-types", "eips", "serde"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
blake2.workspace = true
zk_os_api.workspace = true
zk_os_basic_system.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
