[package]
name = "zksync_os_l1_sender"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
zksync_os_mini_merkle_tree.workspace = true
zksync_os_observability.workspace = true
zksync_os_merkle_tree.workspace = true
zksync_os_pipeline.workspace = true
zksync_os_types.workspace = true
zksync_os_batch_types.workspace = true

zksync_os_interface.workspace = true
zk_ee.workspace = true
zk_os_basic_system.workspace = true

zk_os_basic_system_0_1_0.workspace = true
zk_ee_0_1_0.workspace = true

alloy = { workspace = true, default-features = false, features = [
    "reqwest",
    "kzg",
    "provider-debug-api",
    "signer-local",
] }
anyhow.workspace = true
async-trait.workspace = true
blake2.workspace = true
futures.workspace = true
ruint.workspace = true
serde.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
time = { workspace = true, features = ["parsing", "formatting"] }
itertools.workspace = true
vise.workspace = true

[dev-dependencies]
serde_json.workspace = true
