[package]
name = "zksync_os_l1_sender"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
zksync_os_observability.workspace = true
zksync_os_pipeline.workspace = true
zksync_os_types.workspace = true
zksync_os_batch_types.workspace = true
zksync_os_batcher_metrics.workspace = true
zksync_os_operator_signer.workspace = true

alloy = { workspace = true, default-features = false, features = [
    "reqwest",
    "kzg",
    "provider-debug-api",
    "signer-local",
] }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
itertools.workspace = true
vise.workspace = true
thiserror.workspace = true
